--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,63 @@ body {
     line-height: 1.6;
 }
 
-h1.stylesh, h2.stylesh, h3.stylesh {
+h1.stylish, h2.stylish, h3.stylish {
   font-family: 'Great Vibes', cursive;
   letter-spacing: 1px;
+}
+
+nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #ffffffcc;
+  box-shadow: 0 -2px 10px #0000001a;
+  z-index: 1000;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 100%;
+}
+
+nav ul li {
+  flex: 1;
+  text-align: center;
+}
+
+nav ul li a {
+  display: block;
+  width: 100%;
+  padding: 10px 0;
+  text-decoration: none;
+  color: #333;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  transition: all 0.3s ease;
+}
+
+nav ul li a:hover:not(.last-link) {
+  background-color: #d3d3d3;
+  color: #444;
+}
+
+nav ul li a.last-link:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+footer {
+    text-align: center;
+    padding: 20px 0 10px;
+    background-color: #222;
+    color: #fff;
+    position: relative;
+    bottom: 45px;
+    width: 100%;
 }
